Change 'import options' to 'data type'. (Fix #122)

--- a/view/common/options-sidebar.phtml
+++ b/view/common/options-sidebar.phtml
@@ -17,7 +17,7 @@
         </div>
 
         <div class="import option">
-            <label for="column-import"><?php echo $this->translate('Import options'); ?></label>
+            <label for="column-import"><?php echo $this->translate('Data type'); ?></label>
             <select name="column-import" id="column-import" data-column-option="column-import">
                 <option class="button column-text" value="default"><?php echo $this->translate('Import as text (default)'); ?></option>
                 <option class="button column-url" value="column-url"><?php echo $this->translate('Import as URL reference'); ?></option>
